--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <%= render "shared/navbar" %>
     <%= render "shared/flashes" %>
     <%#= render "layouts/partials/home_page" %>
-    <div class="container mt-5">
+    <div class="container my-5">
       <%= yield %>
     </div>
   </body>
