--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="container d-flex justify-content-center">
+<div class="container d-flex justify-content-center mb-5">
   <%= form_for(@user, html: { class:'p-4 form-sessions' }) do |f| %>
   <h2 class="text-center mb-3">Editar usuario</h2>
 
@@ -55,5 +55,3 @@
     </div>
   <% end %>
 </div>
-
-<%= link_to "Volver", users_path %>
